--- a/wercker-box.yml
+++ b/wercker-box.yml
@@ -1,7 +1,7 @@
 name : nodejs
 version : 1.4.1
 description: Latest NodeJS version
-inherits : team-lockr/ubuntu12.04-nodejs0.10@1.6.1
+inherits : odeke-em/ubuntu12.04-nodejs0.10@1.6.2
 type : main
 platform : ubuntu@12.04
 keywords:
